Refine transition effects for activity cards and buttons

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             padding: 20px;
             backdrop-filter: blur(5px);
             border: 1px solid rgba(255, 255, 255, 0.2);
-            transition: all 0.2s ease;
+            transition: all 0.2s ease-out;
         }
         
         .activity-card:hover {
@@ -117,7 +117,7 @@
             font-weight: bold;
             cursor: pointer;
             font-size: 1em;
-            transition: all 0.2s ease;
+            transition: all ease;
             user-select: none;
         }
         
