Refactor prestige button transition and update description for ascension

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             font-weight: bold;
             font-size: 1.2em;
             cursor: pointer;
-            transition: all 0.3s ease;
+            transition: all ease;
         }
         
         .prestige-btn:hover:not(:disabled) {
@@ -201,9 +201,11 @@
         
         <div class="prestige-section">
             <h3>🌟 Ascend to Legend Status 🌟</h3>
-            <p>Reach 1,000,000 cool points to unlock your true identity!</p>
+            <p>Reach 1,000,000 cool points to unlock the master of coolness!</p>
+            <!-- 
             <button class="prestige-btn" id="prestigeBtn" disabled>Become a Legend (Requires 1M points)</button>
             <p id="prestigeLevel">Legend Level: 0</p>
+            -->
         </div>
     </div>
 
