--- a/index.html
+++ b/index.html
@@ -201,11 +201,9 @@
         
         <div class="prestige-section">
             <h3>🌟 Ascend to Legend Status 🌟</h3>
-            <p>Reach 1,000,000 cool points to unlock the master of coolness!</p>
-            <!-- 
+            <p>Reach 1,000,000 cool points to unlock your true identity!</p>
             <button class="prestige-btn" id="prestigeBtn" disabled>Become a Legend (Requires 1M points)</button>
             <p id="prestigeLevel">Legend Level: 0</p>
-            -->
         </div>
     </div>
 
